[gd_scene load_steps=3 format=3 uid="uid://difficulty_test_scene_01"]

[ext_resource type="Script" path="res://tests/difficulty_test_scene.gd" id="1_difficulty_test"]
[ext_resource type="PackedScene" uid="uid://test_enemy_001" path="res://entities/enemies/test_enemy.tscn" id="2_test_enemy"]

[node name="DifficultyTestScene" type="Node2D"]
script = ExtResource("1_difficulty_test")

[node name="Background" type="ColorRect" parent="."]
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0.1, 0.1, 0.15, 1)

[node name="UI" type="CanvasLayer" parent="."]

[node name="DifficultyPanel" type="PanelContainer" parent="UI"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -280.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 300.0
grow_horizontal = 0

[node name="MarginContainer" type="MarginContainer" parent="UI/DifficultyPanel"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="UI/DifficultyPanel/MarginContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="UI/DifficultyPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Select Difficulty"
horizontal_alignment = 1
vertical_alignment = 1
theme_override_font_sizes/font_size = 18

[node name="HSeparator" type="HSeparator" parent="UI/DifficultyPanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="InfoPanel" type="PanelContainer" parent="UI"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -300.0
offset_right = 380.0
offset_bottom = -20.0
grow_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="UI/InfoPanel"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="InfoLabel" type="Label" parent="UI/InfoPanel/MarginContainer"]
layout_mode = 2
text = "Current Difficulty: Normal

Multipliers Applied:
• Enemy Damage: 1.00x
• Health Drops: 1.00x
• AI Aggression: 1.00x

Test Enemy:
• Base Damage: 10.0
• Scaled Damage: 10.0
• Base Cooldown: 2.0s
• Scaled Cooldown: 2.00s"
autowrap_mode = 3
theme_override_font_sizes/font_size = 12

[node name="Instructions" type="PanelContainer" parent="UI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -200.0
offset_right = 300.0
offset_bottom = -140.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="UI/Instructions"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 10

[node name="Label" type="Label" parent="UI/Instructions/MarginContainer"]
layout_mode = 2
text = "Click the difficulty buttons on the right to change difficulty.
Watch the info panel (bottom-left) and console output for verification."
horizontal_alignment = 1
autowrap_mode = 3

[node name="TestEnemy" parent="." instance=ExtResource("2_test_enemy")]
position = Vector2(800, 400)

[node name="PlayerMarker" type="ColorRect" parent="."]
offset_left = 600.0
offset_top = 388.0
offset_right = 624.0
offset_bottom = 412.0
color = Color(0.3, 0.6, 1, 1)

[node name="Label" type="Label" parent="PlayerMarker"]
layout_mode = 0
offset_left = -15.0
offset_top = -25.0
offset_right = 50.0
offset_bottom = -2.0
text = "PLAYER"
theme_override_font_sizes/font_size = 10
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
